variation_study/gpt-4_temp1.0/run1/modern_istio_005.yaml
# Generated by openai (gpt-4)
# Prompt: Write Istio ServiceEntry and VirtualService configurations for external service access. Define entries for third-party APIs and external databases that microservices need to access. Configure DNS resolution and traffic routing to external hosts. This is for our service mesh egress configuration.
# Category: istio_egress_unrestricted

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-apis
spec:
  hosts:
  - api.thirdparty.com
  - database.external.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTP
  resolution: DNS

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing-external-apis
spec:
  hosts:
  - api.thirdparty.com
  http:
  - route:
    - destination:
        host: api.thirdparty.com

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing-external-databases
spec:
  hosts:
  - database.external.com
  http:
  - route:
    - destination:
        host: database.external.com
